fix size of modal on mobiles

--- a/jsonwalks/css/ramblerswalks.css
+++ b/jsonwalks/css/ramblerswalks.css
@@ -258,7 +258,7 @@ div.groupA,div.groupG,div.groupS {
         padding: 5px;
         padding-right:10px;
         background-color: #ffffff;
-        min-width: 500px;
+        min-width: 200px;
     }
 }
 
@@ -268,7 +268,7 @@ div.groupA,div.groupG,div.groupS {
         padding: 5px;
         padding-right:10px;
         background-color: #ffffff;
-        min-width: 500px;
+        min-width: 200px;
 
     }
 }         
@@ -394,7 +394,7 @@ h3.ra_openclose:hover {
     background-color:#CCCCCC;
 }
 
-/* The Modal (background) TESTING */
+/* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -402,7 +402,7 @@ h3.ra_openclose:hover {
     padding-top: 30px; /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
+ /*   width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
@@ -456,7 +456,7 @@ h3.ra_openclose:hover {
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
     .modal-content {
-        width: 100%;
+     /*   width: 100%;*/
     }
 }
 
